--- a/index.html
+++ b/index.html
@@ -5,10 +5,79 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>CV site</title>
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&family=Raleway:ital,wght@0,100;0,200;0,700;1,100&display=swap" rel="stylesheet">
+
   </head>
   <body>
-  
+    <main class="l-main bd-container">
+        <div class="resume" id="area-cv">
+            <div class="resume__left">
+                <!--========== HOME ==========-->
+                <section class="home" id="home">
+                  <div class="home_container section bd-grid"
+                    <div class="home__data bd-grid"
+                      <img src="assets/cvkuva.jpg" class=home__img>
+                      <h1 class="home__title"> SAKU JUSSILA </h1>
+                      <h3 class="home__profession"> Future Data Engineer </h3>
+
+                </section>
+
+                <!--========== SOCIAL ==========-->
+                <section class="social section">
+
+                </section>
+
+                <!--========== PROFILE ==========-->
+                <section class="profile section" id="profile">
+
+                </section>
+
+                <!--========== EDUCATION ==========-->
+                <section class="education section" id="education">
+
+                </section>
+
+
+                <!--========== SKILLS  ==========-->
+                <section class="skills section" id="skills">
+
+                </section>
+
+            </div>
+
+            <div class="resume__right">
+                <!--========== EXPERIENCE ==========-->
+                <section class="experience section" id="experience">
+
+                </section>
+
+                <!--========== CERTIFICATES ==========-->
+                <section class="certificate section" id="certificates">
+
+                </section>
+
+                <!--========== REFERENCES ==========-->
+                <section class="references section" id="references">
+
+                </section>
+
+                <!--========== LANGUAGES ==========-->
+                <section class="languages section">
+
+                </section>
+
+                <!--========== INTERESTS ==========-->
+                <section class="interests section">
+
+                </section>
+            </div>
+          </div>
+        </main>
+
+
 	<script src="index.js"></script>
   </body>
 </html>
