More content and styles added

--- a/index.html
+++ b/index.html
@@ -3,25 +3,47 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>CV site</title>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&family=Raleway:ital,wght@0,100;0,200;0,700;1,100&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
 
   </head>
   <body>
     <main class="l-main bd-container">
         <div class="resume" id="area-cv">
-            <div class="resume__left">
+            <div class="resume_left">
                 <!--========== HOME ==========-->
                 <section class="home" id="home">
-                  <div class="home_container section bd-grid"
-                    <div class="home__data bd-grid"
-                      <img src="assets/cvkuva.jpg" class=home__img>
-                      <h1 class="home__title"> SAKU JUSSILA </h1>
-                      <h3 class="home__profession"> Future Data Engineer </h3>
+
+                  <div class="home_container section bd-grid">
+
+                    <div class="home_data bd-grid">
+                      <img src="assets/cvkuva.jpg" alt="cv" class="home_img">
+                      <h1 class="home_title"> SAKU JUSSILA </h1>
+                      <h3 class="home_profession"> Future Data Engineer </h3>
+                    </div>
+                  </div>
+
+                  <div class="home_information">
+                    <span class="home_information">
+                      <i class="bx bx-map home_icon"></i> Esivallankatu 20, 28120 Pori
+                    </span>
+                  </div>
+
+                  <div class="home_information">
+                    <span class="home_information">
+                      <i class="bx bx-envelope home_icon"></i> jussila.saku@gmail.com
+                    </span>
+                  </div>
+
+                  <div class="home_information">
+                    <span class="home_information">
+                      <i class="bx bx-phone home_icon"></i> +358 40 8467556
+                    </span>
+                  </div>
+
 
                 </section>
 
