Social section and links added

--- a/index.html
+++ b/index.html
@@ -49,12 +49,28 @@
 
                 <!--========== SOCIAL ==========-->
                 <section class="social section">
+                  <h2 class="section-title">SOCIAL</h2>
+
+                  <div class="social_container bd-grid">
+                    <a href="https://github.com/Sakujii" class="social_link">
+                      <i class="social_icon bx bxl-github"></i>@sakujii
+                    </a>
+                    <a href="https://www.linkedin.com/in/saku-jussila/" class="social_link">
+                      <i class="social_icon bx bxl-linkedin-square"></i>@saku-jussila
+                    </a>
+                    <a href="https://www.facebook.com/saku.jussila/" class="social_link">
+                      <i class="social_icon bx bxl-facebook"></i>@saku.jussila
+                    </a>
+                    <a href="https://www.instagram.com/the3travlrs/" class="social_link">
+                      <i class="social_icon bx bxl-instagram"></i>@the3travelrs
+                    </a>
+                  </div>
 
                 </section>
 
                 <!--========== PROFILE ==========-->
                 <section class="profile section" id="profile">
-
+                  
                 </section>
 
                 <!--========== EDUCATION ==========-->
