Education section and content added with styles

--- a/index.html
+++ b/index.html
@@ -70,18 +70,68 @@
 
                 <!--========== PROFILE ==========-->
                 <section class="profile section" id="profile">
-                  
+                  <h2 class="section-title"> ABOUT ME </h2>
+                  <p class="profile_description">I'm an engineering minded individual who loves the nature. I'm easygoing and co-operative, although a bit of a perfectionist when it comes to details. Traveling the world during recent years has given me spontaneity and taught me how to compromise. I love creating things with my hands, climbing rocks and listening to my beloved records. </p>
+                  <p class="profile_description">Professionally I have a lot of interest towards industry (especially the energy sector) and developing it with data-driven solutions. I'm also a visualist, and I would love to create informative graphs to help other people and businesses. </p>
                 </section>
 
                 <!--========== EDUCATION ==========-->
                 <section class="education section" id="education">
+                  <h2 class="section-title">EDUCATION</h2>
+                  <div class="education_container bd-grid">
+                    <div class="education_content">
+                      <div class="education_time">
+                        <span class="education_rounder"></span>
+                        <span class="education_line"></span>
+                      </div>
+                      <div class="education_data bd-grid">
+                        <h3 class="education_title">MASTER OF SCIENCE</h3>
+                        <span class="education_studies">Tampere University</span>
+                        <span class="education_year"> <i class="education_icon bx bx-calendar"></i>2017–2020</span>
+                        <ul class="education_list">
+                          <li>Major in Energy and Biorefinery Engineering</li>
+                          <li>Minor in Computer Science</li>
+                          <li>Master’s thesis: <a id="masters" href="https://trepo.tuni.fi/handle/10024/122918" style=""> Development of energy consumption and production in wastewater treatment</a></li>
+                        </ul>
+                      </div>
+                    </div>
 
+                    <div class="education_content">
+                      <div class="education_time">
+                        <span class="education_rounder"></span>
+                        <span class="education_line"></span>
+                      </div>
+                      <div class="education_data bd-grid">
+                        <h3 class="education_title">ERASMUS EXCHANGE PERIOD</h3>
+                        <span class="education_studies">Czech Technical University in Prague</span>
+                        <span class="education_year"> <i class="education_icon bx bx-calendar"></i>2017–2018</span>
+                      </div>
+                    </div>
+
+                    <div class="education_content">
+                      <div class="education_time">
+                        <span class="education_rounder"></span>
+                        <span class="education_line" id="education-end"></span>
+                      </div>
+                      <div class="education_data bd-grid">
+
+                        <h3 class="education_title">BACHELOR OF SCIENCE</h3>
+                        <span class="education_studies">Tampere University of Technology</span>
+                        <span class="education_year"> <i class='education_icon bx bx-calendar'></i>2014–2017</span>
+                        <ul class="education_list">
+                          <li>Major in Energy and Process Engineering</li>
+                          <li>Minor in Mechanical Engineering</li>
+                          <li>Bachelor's thesis: <em>Design of a borehole heat exchanger in Finland</em></li>
+                        </ul>
+                      </div>
+                    </div>
+                  </div>
                 </section>
 
 
                 <!--========== SKILLS  ==========-->
                 <section class="skills section" id="skills">
-
+                  <h2 class="section-title"> SKILLS </h2>
                 </section>
 
             </div>
