Skills and experience section and styles added

--- a/index.html
+++ b/index.html
@@ -49,20 +49,20 @@
 
                 <!--========== SOCIAL ==========-->
                 <section class="social section">
-                  <h2 class="section-title">SOCIAL</h2>
+                  <h2 class="section-title">SOCIAL MEDIA</h2>
 
                   <div class="social_container bd-grid">
                     <a href="https://github.com/Sakujii" class="social_link">
-                      <i class="social_icon bx bxl-github"></i>@sakujii
+                      <i class="social_icon bx bxl-github"></i>
                     </a>
                     <a href="https://www.linkedin.com/in/saku-jussila/" class="social_link">
-                      <i class="social_icon bx bxl-linkedin-square"></i>@saku-jussila
+                      <i class="social_icon bx bxl-linkedin-square"></i>
                     </a>
                     <a href="https://www.facebook.com/saku.jussila/" class="social_link">
-                      <i class="social_icon bx bxl-facebook"></i>@saku.jussila
+                      <i class="social_icon bx bxl-facebook"></i>
                     </a>
                     <a href="https://www.instagram.com/the3travlrs/" class="social_link">
-                      <i class="social_icon bx bxl-instagram"></i>@the3travelrs
+                      <i class="social_icon bx bxl-instagram"></i>
                     </a>
                   </div>
 
@@ -132,6 +132,39 @@
                 <!--========== SKILLS  ==========-->
                 <section class="skills section" id="skills">
                   <h2 class="section-title"> SKILLS </h2>
+                  <div class="skills_content bd-grid">
+                    <ul class="skills_data">
+                      <li class="skills_name">
+                        <span class="skills_circle"></span> Python
+                      </li>
+                      <li class="skills_name">
+                        <span class="skills_circle"></span> C++
+                      </li>
+                      <li class="skills_name">
+                        <span class="skills_circle"></span> Git
+                      </li>
+                      <li class="skills_name">
+                        <span class="skills_circle"></span> Unix shell
+                      </li>
+                      <li class="skills_name">
+                        <span class="skills_circle"></span> SQL
+                      </li>
+                    </ul>
+                    <ul class="skills_data">
+                      <li class="skills_name">
+                        <span class="skills_circle"></span> HTML
+                      </li>
+                      <li class="skills_name">
+                        <span class="skills_circle"></span> CSS
+                      </li>
+                      <li class="skills_name">
+                        <span class="skills_circle"></span> JavaScript
+                      </li>
+                      <li class="skills_name">
+                        <span class="skills_circle"></span> LaTeX
+                      </li>
+                    </ul>
+                  </div>
                 </section>
 
             </div>
@@ -140,17 +173,85 @@
                 <!--========== EXPERIENCE ==========-->
                 <section class="experience section" id="experience">
 
+                  <h2 class="section-title">EXPERIENCE</h2>
+
+                  <div class="experience_content">
+                    <div class="experience_time">
+                      <span class="experience_rounder"></span>
+                      <span class="experience_line"></span>
+                    </div>
+                    <div class="experience_data bd-grid">
+                      <h3 class="experience_title">FREELANCER</h3>
+                      <span class="experience_company">Upwork Inc.</span>
+                      <span class="experience_year"> <i class="education_icon bx bx-calendar"></i>May 2019 –</span>
+
+                      <p class="experience_description">
+
+                        <li>Data entry jobs</li>
+                        <li>Translations from English to Finnish and vice versa</li>
+                      </p>
+                    </div>
+                  </div>
+
+                  <div class="experience_content">
+                    <div class="experience_time">
+                      <span class="experience_rounder"></span>
+                      <span class="experience_line"></span>
+                    </div>
+                    <div class="experience_data bd-grid">
+                      <h3 class="experience_title">MASTER'S THESIS WORKER</h3>
+                      <span class="experience_company">Jyväskylän Seudun Puhdistamo Oy</span>
+                      <span class="experience_location"><i class="bx bx-map home_icon"></i>Jyväskylä, Finland
+                      <span class="experience_year"> <i class="education_icon bx bx-calendar"></i> Nov 2019 – Jul 2020</span>
+                      <p class="experience_description">
+                        <li>Development of Energy Production and Consumption in Nenäinniemi wastewater treatment plant</li>
+                        <li>Data analysis about energy (CHP) production and consumption</li>
+                        <li>Future guidelines for applicable technologies</li>
+                      </p>
+                    </div>
+                  </div>
+
+                  <div class="experience_content">
+                    <div class="experience_time">
+                      <span class="experience_rounder"></span>
+                      <span class="experience_line"></span>
+                    </div>
+                    <div class="experience_data bd-grid">
+                      <h3 class="experience_title">CUSTOMER COORDINATOR INTERN</h3>
+                      <span class="experience_company">Kemira Oyj</span>
+                      <span class="experience_location"><i class="bx bx-map home_icon"></i>Gdansk, Poland
+                      <span class="experience_year"> <i class="education_icon bx bx-calendar"></i> May 2019 – Sep 2019</span>
+                      <p class="experience_description">
+                        <li>Handling chemical orders of Finnish customers</li>
+                        <li>Communicating with production plants and transport companies</li>
+                        <li>Order to Cash processing in SAP</li>
+                      </p>
+                    </div>
+                  </div>
+
+                  <div class="experience_content">
+                    <div class="experience_time">
+                      <span class="experience_rounder"></span>
+                      <span class="experience_line" id="experience-end"></span>
+                    </div>
+                    <div class="experience_data bd-grid">
+                      <h3 class="experience_title">ENGINEERING TRAINEE</h3>
+                      <span class="experience_company">Pori Energia Oy</span>
+                      <span class="experience_location"><i class="bx bx-map home_icon"></i>Pori, Finland
+                      <span class="experience_year"> <i class="education_icon bx bx-calendar"></i> May 2018 – Aug 2018</span>
+                      <span class="experience_year"> <i class="education_icon bx bx-calendar"></i> May 2017 – Aug 2017</span>
+                      <p class="experience_description">
+                        <li>District heating and cooling data analysis in Microsoft Excel</li>
+                        <li>Managing monthly data reports</li>
+                        <li>Documenting district heating network in Trimble NIS</li>
+                        <li>Testing a new browser based client database system</li>
+                      </p>
+                    </div>
+                  </div>
+
+
                 </section>
 
-                <!--========== CERTIFICATES ==========-->
-                <section class="certificate section" id="certificates">
-
-                </section>
-
-                <!--========== REFERENCES ==========-->
-                <section class="references section" id="references">
-
-                </section>
 
                 <!--========== LANGUAGES ==========-->
                 <section class="languages section">
@@ -161,6 +262,14 @@
                 <section class="interests section">
 
                 </section>
+
+                <!--========== REFERENCES ==========-->
+                <section class="references section" id="references">
+                  <p>
+                    Available on request
+                  </p>
+                </section>
+
             </div>
           </div>
         </main>
