Languages, interest & references implemented

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV site</title>
-
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
 
@@ -135,33 +135,121 @@
                   <div class="skills_content bd-grid">
                     <ul class="skills_data">
                       <li class="skills_name">
-                        <span class="skills_circle"></span> Python
+                        Python
                       </li>
                       <li class="skills_name">
-                        <span class="skills_circle"></span> C++
+                        C++
                       </li>
                       <li class="skills_name">
-                        <span class="skills_circle"></span> Git
+                        Git
                       </li>
                       <li class="skills_name">
-                        <span class="skills_circle"></span> Unix shell
+                        Unix shell
                       </li>
                       <li class="skills_name">
-                        <span class="skills_circle"></span> SQL
+                        SQL
                       </li>
                     </ul>
+
+                    <ul id="skills_python">
+                      <li>
+                      <span class="skills_circle"></span>
+                      <span class="skills_circle"></span>
+                      <span class="skills_circle"></span>
+                      <span class="skills_circle"></span>
+                      <span class="empty_circle"></span>
+                      </li>
+
+                      <li id="skills_c++">
+                        <span class="skills_circle"></span>
+                        <span class="skills_circle"></span>
+                        <span class="skills_circle"></span>
+                        <span class="skills_circle"></span>
+                        <span class="empty_circle"></span>
+                      </li>
+
+                      <li id="skills_git">
+                        <span class="skills_circle"></span>
+                        <span class="skills_circle"></span>
+                        <span class="skills_circle"></span>
+                        <span class="empty_circle"></span>
+                        <span class="empty_circle"></span>
+                      </li>
+
+                      <li id="skills_unix">
+                        <span class="skills_circle"></span>
+                        <span class="skills_circle"></span>
+                        <span class="skills_circle"></span>
+                        <span class="empty_circle"></span>
+                        <span class="empty_circle"></span>
+                      </li>
+
+                      <li id="SQL">
+                        <span class="skills_circle"></span>
+                        <span class="skills_circle"></span>
+                        <span class="empty_circle"></span>
+                        <span class="empty_circle"></span>
+                        <span class="empty_circle"></span>
+                      </li>
+                    </ul>
+
                     <ul class="skills_data">
                       <li class="skills_name">
-                        <span class="skills_circle"></span> HTML
+                        HTML
                       </li>
                       <li class="skills_name">
-                        <span class="skills_circle"></span> CSS
+                        CSS
                       </li>
                       <li class="skills_name">
-                        <span class="skills_circle"></span> JavaScript
+                        JavaScript
                       </li>
                       <li class="skills_name">
-                        <span class="skills_circle"></span> LaTeX
+                        LaTeX
+                      </li>
+                      <li class="skills_name">
+                        Microsoft Office
+                      </li>
+                    </ul>
+
+                    <ul id="skills_html">
+                      <li>
+                      <span class="skills_circle"></span>
+                      <span class="skills_circle"></span>
+                      <span class="skills_circle"></span>
+                      <span class="skills_circle"></span>
+                      <span class="empty_circle"></span>
+                      </li>
+
+                      <li id="skills_css">
+                        <span class="skills_circle"></span>
+                        <span class="skills_circle"></span>
+                        <span class="skills_circle"></span>
+                        <span class="empty_circle"></span>
+                        <span class="empty_circle"></span>
+                      </li>
+
+                      <li id="skills_javascript">
+                        <span class="skills_circle"></span>
+                        <span class="skills_circle"></span>
+                        <span class="empty_circle"></span>
+                        <span class="empty_circle"></span>
+                        <span class="empty_circle"></span>
+                      </li>
+
+                      <li id="skills_latex">
+                        <span class="skills_circle"></span>
+                        <span class="skills_circle"></span>
+                        <span class="skills_circle"></span>
+                        <span class="skills_circle"></span>
+                        <span class="empty_circle"></span>
+                      </li>
+
+                      <li id="skills_office">
+                        <span class="skills_circle"></span>
+                        <span class="skills_circle"></span>
+                        <span class="skills_circle"></span>
+                        <span class="skills_circle"></span>
+                        <span class="skills_circle"></span>
                       </li>
                     </ul>
                   </div>
@@ -255,19 +343,98 @@
 
                 <!--========== LANGUAGES ==========-->
                 <section class="languages section">
+                  <h2 class="section-title">LANGUAGES</h2>
 
+                  <div class="languages_content bd-grid">
+                    <ul class="languages_data">
+                    <li class="languages_name">
+                      Finnish
+                    </li>
+
+                    <li class="languages_name">
+                      English
+                    </li>
+
+                    <li class="languages_name">
+                      Polish
+                    </li>
+
+                    <li class="languages_name">
+                      Swedish
+                    </li>
+                  </ul>
+
+                  <ul class="languages_data">
+                    <li class="languages_name">
+                      <span class="languages_circle"></span>
+                      <span class="languages_circle"></span>
+                      <span class="languages_circle"></span>
+                      <span class="languages_circle"></span>
+                      <span class="languages_circle"></span>
+                    </li>
+                    <li class="languages_name">
+                      <span class="languages_circle"></span>
+                      <span class="languages_circle"></span>
+                      <span class="languages_circle"></span>
+                      <span class="languages_circle"></span>
+                      <span class="languages_circle"></span>
+                    </li>
+                    <li class="languages_name">
+                      <span class="languages_circle"></span>
+                      <span class="languages_circle"></span>
+                      <span class="languages_circle"></span>
+                      <span class="empty_circle"></span>
+                      <span class="empty_circle"></span>
+                    </li>
+                    <li class="languages_name">
+                      <span class="languages_circle"></span>
+                      <span class="languages_circle"></span>
+                      <span class="languages_circle"></span>
+                      <span class="empty_circle"></span>
+                      <span class="empty_circle"></span>
+                    </li>
+                  </ul>
                 </section>
 
                 <!--========== INTERESTS ==========-->
                 <section class="interests section">
-
+                  <h2 class="section-title">INTERESTS</h2>
+                  <div class="interests_container bd-grid">
+                    <div class="interests_content">
+                      <i class="material-icons interests_icon">album</i>
+                      <span class="interest_name">Vinyl records</span>
+                    </div>
+                    <div class="interests_content">
+                      <i class="material-icons interests_icon">landscape</i>
+                      <span class="interest_name">Climbing</span>
+                    </div>
+                    <div class="interests_content">
+                      <i class="material-icons interests_icon">phishing</i>
+                      <span class="interest_name">Fishing</span>
+                    </div>
+                    <div class="interests_content">
+                      <i class="material-icons interests_icon">travel_explore</i>
+                      <span class="interest_name">Traveling</span>
+                    </div>
+                    <div class="interests_content">
+                      <i class="material-icons interests_icon">directions_bike</i>
+                      <span class="interest_name">Fixed gear bikes</span>
+                    </div>
+                    <div class="interests_content">
+                      <i class="material-icons interests_icon">construction</i>
+                      <span class="interest_name">DIY projects</span>
+                    </div>
+                  </div>
                 </section>
 
                 <!--========== REFERENCES ==========-->
                 <section class="references section" id="references">
-                  <p>
-                    Available on request
-                  </p>
+                  <h2 class="section-title">REFERENCES</h2>
+                  <div class="refereces_container bd-grid">
+                    <p id="references">
+                      Available on request
+                    </p>
+                  </div>
                 </section>
 
             </div>
