Media queries added, some small fixes

--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
                     </span>
                   </div>
 
-
                 </section>
 
                 <!--========== SOCIAL ==========-->
@@ -71,8 +70,8 @@
                 <!--========== PROFILE ==========-->
                 <section class="profile section" id="profile">
                   <h2 class="section-title"> ABOUT ME </h2>
-                  <p class="profile_description">I'm an engineering minded individual who loves the nature. I'm easygoing and co-operative, although a bit of a perfectionist when it comes to details. Traveling the world during recent years has given me spontaneity and taught me how to compromise. I love creating things with my hands, climbing rocks and listening to my beloved records. </p>
-                  <p class="profile_description">Professionally I have a lot of interest towards industry (especially the energy sector) and developing it with data-driven solutions. I'm also a visualist, and I would love to create informative graphs to help other people and businesses. </p>
+                  <p class="profile_description">I'm an engineering minded individual who loves the nature. I'm easygoing and co-operative, although a bit of a perfectionist when it comes to details. Traveling the world has given me spontaneity and has taught me how to compromise. I love creating things with my hands, climbing rocks and listening to my beloved records. </p>
+                  <p class="profile_description">Professionally I have a lot of interest towards different industries (especially the energy sector) and developing it with data-driven solutions. I'm also a visualist, and I would love to create informative graphs to help other people and businesses. </p>
                 </section>
 
                 <!--========== EDUCATION ==========-->
@@ -151,8 +150,8 @@
                       </li>
                     </ul>
 
-                    <ul id="skills_python">
-                      <li>
+                    <ul>
+                      <li id="skills_python">
                       <span class="skills_circle"></span>
                       <span class="skills_circle"></span>
                       <span class="skills_circle"></span>
@@ -207,7 +206,7 @@
                         LaTeX
                       </li>
                       <li class="skills_name">
-                        Microsoft Office
+                        Office
                       </li>
                     </ul>
 
@@ -424,6 +423,16 @@
                       <i class="material-icons interests_icon">construction</i>
                       <span class="interest_name">DIY projects</span>
                     </div>
+                  </div>
+                </section>
+
+                <!--========== LIFE PHILOSOPHY ==========-->
+                <section class="references section" id="references">
+                  <h2 class="section-title">MY LIFE PHILOSOPHY</h2>
+                  <div class="philosophy_container">
+                    <p id="philosophy">
+                      "Learning new skills is never a waste of time."
+                    </p>
                   </div>
                 </section>
 
