Added a few links and other smal bits

--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
 
                   <div class="home_information">
                     <span class="home_information">
-                      <i class="bx bx-map home_icon"></i> Esivallankatu 20, 28120 Pori
+                      <i class="bx bx-map home_icon"></i> Na Zaspe 2D/12, 80546 Gdańsk, Poland
                     </span>
                   </div>
 
                   <div class="home_information">
                     <span class="home_information">
-                      <i class="bx bx-envelope home_icon"></i> jussila.saku@gmail.com
+                      <i class="bx bx-envelope home_icon"></i><a href="mailto:jussila.saku@gmail.com">jussila.saku@gmail.com</a>
                     </span>
                   </div>
 
                   <div class="home_information">
                     <span class="home_information">
-                      <i class="bx bx-phone home_icon"></i> +358 40 8467556
+                      <i class="bx bx-phone home_icon"></i><a href="tel:+358408467556">+358 40 8467556</a>
                     </span>
                   </div>
 
@@ -48,7 +48,7 @@
 
                 <!--========== SOCIAL ==========-->
                 <section class="social section">
-                  <h2 class="section-title">SOCIAL MEDIA</h2>
+                  <h2 class="section-title">SOCIAL</h2>
 
                   <div class="social_container bd-grid">
                     <a href="https://github.com/Sakujii" class="social_link">
@@ -56,6 +56,9 @@
                     </a>
                     <a href="https://www.linkedin.com/in/saku-jussila/" class="social_link">
                       <i class="social_icon bx bxl-linkedin-square"></i>
+                    </a>
+                    <a href="https://www.upwork.com/freelancers/~01c5223158291ab972/" class="social_link">
+                      <i class="social_icon bx bxl-upwork"></i>
                     </a>
                     <a href="https://www.facebook.com/saku.jussila/" class="social_link">
                       <i class="social_icon bx bxl-facebook"></i>
@@ -90,7 +93,7 @@
                         <ul class="education_list">
                           <li>Major in Energy and Biorefinery Engineering</li>
                           <li>Minor in Computer Science</li>
-                          <li>Master’s thesis: <a id="masters" href="https://trepo.tuni.fi/handle/10024/122918" style=""> Development of energy consumption and production in wastewater treatment</a></li>
+                          <li>Master’s thesis: <a id="masters" href="https://trepo.tuni.fi/handle/10024/122918"> Development of energy consumption and production in wastewater treatment</a></li>
                         </ul>
                       </div>
                     </div>
@@ -273,9 +276,9 @@
                       <span class="experience_year"> <i class="education_icon bx bx-calendar"></i>May 2019 –</span>
 
                       <p class="experience_description">
-
-                        <li>Data entry jobs</li>
+                        <li>Code mentoring in CodeBerry programming school</li>
                         <li>Translations from English to Finnish and vice versa</li>
+                        <li>Data entry jobs</li>
                       </p>
                     </div>
                   </div>
@@ -401,7 +404,7 @@
                   <div class="interests_container bd-grid">
                     <div class="interests_content">
                       <i class="material-icons interests_icon">album</i>
-                      <span class="interest_name">Vinyl records</span>
+                      <span class="interest_name"><a id="discogs" href="https://sakujii.github.io/discogs/">Vinyl records</a></span>
                     </div>
                     <div class="interests_content">
                       <i class="material-icons interests_icon">landscape</i>
@@ -431,7 +434,7 @@
                   <h2 class="section-title">MY LIFE PHILOSOPHY</h2>
                   <div class="philosophy_container">
                     <p id="philosophy">
-                      "Learning new skills is never a waste of time."
+                      ”Learning new skills is never a waste of time.”
                     </p>
                   </div>
                 </section>
